light mode dark mode toggle fixed

--- a/style.css
+++ b/style.css
@@ -10,9 +10,7 @@
     word-wrap: normal;
     white-space: nowrap;
     direction: ltr;
-    border-width: 2px;
-    border-style: solid;
-    border-radius: 6px;
+    border-width: 0px;
     background-color: black;
     color: white;
     padding: 2px;
@@ -41,6 +39,18 @@
       padding: 0 8%;
       position: fixed;
       overflow: hidden;
+  }
+
+  .light-mode header{
+    background-color: #0A0069;
+  }
+
+  .light-mode {
+    background-color: #FFFCF9;
+  }
+
+  .light-mode .modeSelector {
+    background-color: transparent;
   }
 
   nav {
@@ -92,6 +102,7 @@
 
   body {
       background-color: #181818;
+      color: #fff;
   }
 
   @media screen and (max-width: 481px) {
